--- a/src/css/ProfilePage.css
+++ b/src/css/ProfilePage.css
@@ -118,6 +118,8 @@
   color: #ffffff;
   border: none;
   background-color: rgb(255, 0, 0);
+  padding: 10px;
+  border-radius: 10px;
   margin: 20px;
   
 }
