--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0rem;
   text-align: center;
 }
 
@@ -91,5 +91,5 @@
   }
 }
 #root{
-   background: linear-gradient(90deg, #dbeafe, #ede9fe, #fce7f3);
+   background: linear-gradient(90deg, #dbeafe, #e4deff, #e7f1fc);
 }
