--- a/src/css/AuthorPage.css
+++ b/src/css/AuthorPage.css
@@ -24,11 +24,13 @@
   border-radius: 10px;
   background: #fdfdfd;
   transition: transform 0.2s ease;
+  border: 2px solid rgb(182, 227, 255);
 }
 
 .author-card:hover {
   transform: scale(1.03);
   background: #fafafa;
+  border: 1px solid rgb(0, 162, 255);
 }
 
 .author-link {
@@ -40,6 +42,7 @@
 
 .author-link:hover {
   text-decoration: underline;
+  color: rgb(204, 0, 255);
 }
 
 .scholar-link {
