--- a/src/css/AuthorPublicationPage.css
+++ b/src/css/AuthorPublicationPage.css
@@ -3,7 +3,7 @@
   margin: 20px auto;
   padding: 20px;
   font-family: Arial, sans-serif;
-  background-color: #f9f9f9;
+  background: transparent;
   border-radius: 10px;
 }
 
@@ -52,7 +52,7 @@
   padding: 15px;
   margin-bottom: 15px;
   border-radius: 8px;
-  border: 1px solid #ddd;
+  border: 1px solid #cbedff;
   box-shadow: 0 2px 5px rgba(0,0,0,0.05);
 }
 
