--- a/src/css/signup.css
+++ b/src/css/signup.css
@@ -48,7 +48,7 @@ input:focus {
 .but {
   width: 100%;
   padding: 0.9rem;
-  background: #2563eb;
+  background: #ff4d00;
   color: #fff;
   font-size: 1rem;
   font-weight: 600;
@@ -59,7 +59,7 @@ input:focus {
 }
 
 .but:hover {
-  background: #003bde;
+  background: #ff8d02;
 }
 
 .button:active {
@@ -81,4 +81,11 @@ input:focus {
 
 .signup-footer span:hover {
   text-decoration: underline;
+}
+span{
+   color: green;
+}
+span:hover{
+  cursor: pointer;
+  color: rgb(0, 85, 0);
 }
